# net-est-web

./: .commit_msg.txt  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_SUMMARY_2025-08-07.md  CONSOLIDATION_REPORT.md  CONTINUATION_GUIDE.txt  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_RESOURCES.md  DOCUMENTATION.md  HITL_UI_UPDATE_FIX_COMPLETE.md  HITL_WORKFLOW_VALIDATION.md  IMPLEMENTATION_PLAN.md  LICENSE  MAINTENANCE_LOG.md  MIGRATION_NOTES.md  NET-est-optimized.code-workspace  NEXT_SESSION_QUICKSTART.md  NEXT_STEPS.md  ONBOARDING.md  PRIORITIZED_ACTION_PLAN_2025-08-07.md  PROJECT_CONSOLIDATION_ANALYSIS.md  Project_status_12_sept_2025.md  README.md  REGRESSION_FIX_unifiedStrategyMap.md  REPORT_WISLEY_ACTIVITY.md  SESSION_WRAPUP_2025-09-11.md  SETUP.md  STATUS.md  VS_CODE_OPTIMIZATION_REPORT.md  activate-dev-env.ps1  cache-status.ps1  capture_8000_procs.ps1  code_citations.md  confidence_demo.py  confidence_demo_full.py  conftest.py  console_log_analysis.txt  conversation_archive.md  (+61 more)
backend/: .env.example  .gitignore  Dockerfile  README.md  code_quality.py  debug_length_disparity.py  debug_length_issue.py  debug_paragraph_analysis.py  debug_paragraphs.py  demo_langextract.py  dev_config.py  diagnose_fixed.py  manage_deps.py  pyproject.toml  pytest.ini  requirements-dev-old.txt  requirements-dev.in  requirements-dev.txt  requirements-old.txt  requirements.in  requirements.txt  run_snippet.py  run_snippet2.py  run_snippet3.py  setup_backend.py  start_backend.bat  start_backend_fixed.bat  start_backend_fixed.ps1  start_optimized.bat  start_optimized.py  start_server.py  test_enhanced_analysis.py  test_module3_bridge.py  test_payload.json  test_tag_definitions.py  tmp_phase1_acceptance_probe.py
backend/.venv_py312/: pyvenv.cfg
backend/.venv_py312/Scripts/: activate  activate.bat  csv2ods  dumppdf.py  mailodf  odf2mht  odf2xhtml  odf2xml  odfimgimport  odflint  odfmeta  odfoutline  odfuserfield  pdf2txt.py  xml2odf
backend/archived/: ARCHIVE.md
backend/config/: feature_flags.yaml
backend/docs/: M4_STRATEGY_DETECTOR_CASCADE_REFACTOR.md  M5_CONFIDENCE_ENGINE.md  M5_LANGEXTRACT_INTEGRATION.md  M6_FEEDBACK_SYSTEM.md
backend/scripts/: debug_run_comp_analysis.py  migrate_fs_to_sqlite.py  write_sentence_snapshot.py
backend/src/: __init__.py  aiohttp.py  main.py
backend/src/api/: analytics.py  comparative_analysis.py  health.py  manual_tags.py  semantic_alignment.py  text_input.py
backend/src/core/: __init__.py  config.py  database.py  feature_flags.py  feature_switches.py
backend/src/models/: __init__.py  analytics.py  annotation.py  base.py  comparative_analysis.py  feature_extraction.py  feedback.py  hierarchical_nodes.py  hierarchy.py  manual_tags.py  preprocessor_models.py  semantic_alignment.py  strategy_models.py  text_input.py
backend/src/modules/: __init__.py
backend/src/repositories/: __init__.py  feedback_repository.py
backend/src/repository/: base.py  fs_repository.py  sqlite_repository.py
backend/src/services/: adaptive_threshold_service.py  analytics_service.py  annotation_store.py  comparative_analysis_service.py  confidence_engine.py  explanation_generator.py  feature_extraction_service.py  feature_extractor.py  langextract_provider.py  manual_tags_service.py  micro_span_extractor.py  salience_provider.py  semantic_alignment_service.py  sentence_alignment_service.py  strategy_detector.py  (+4 more)
backend/tests/: conftest.py  test_alignment.json  test_alignment2.json  test_alignment3.json  test_analytics_api.py  test_analytics_service.py  test_annotations_api.py  test_annotations_export.py  test_annotations_export_explanation.py  test_api_export_scope.py  test_cascade_strategy_detector.py  test_cleanup.py  test_confidence_engine.py  test_export_cli.py  test_feature_extraction.py  test_feature_flags_defaults.py  test_feedback_api.py  test_feedback_integration.py  test_feedback_persistence.py  test_feedback_repository.py  test_fs_repository.py  test_full_text_processing.py  test_gold_persistence_and_export.py  test_health.py  test_hierarchical_integration.py  test_hierarchical_output.py  test_hierarchy_node_assembly.py  test_hierarchy_paragraph_alignment.py  test_hierarchy_snapshot.py  test_hitl_contract_snapshot.py  test_hitl_phase1.py  test_langextract_features_comparison.py  test_langextract_integration.py  test_lexical_complexity.py  test_micro_analysis.py  test_micro_span_extractor.py  test_micro_with_lexical_scorer.py  test_models.py  test_persistence_modes.py  test_round_trip_import.py  (+17 more)
backend/tools/: smoke_test_pipeline.py
hilt/: README.md  (+2 more)
(+414 files in other folders)
